Individual transform properties' animations don't create stacking context in delay phase
Categories
(Core :: CSS Transitions and Animations, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox67 | --- | fixed |
People
(Reporter: hiro, Assigned: boris)
References
Details
Attachments
(4 files)
Reporter | ||
Updated•6 years ago
|
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 1•6 years ago
•
|
||
I just tried to apply all of my patches of Bug 1425837, Bug 1526847, and Bug 1526850, and can see something like this: blue rectangle overlaps the green one. I guess this is what we expected.
Assignee | ||
Comment 2•6 years ago
|
||
nsIFrame::BuildDisplayListForStackingContext() will check the existence
of transform animations, so we need to update
nsLayoutUtils::HasAnimationsOfPoperty(). However, checking only
eCSSProperty_transform is not enough. We have to check all the transform-like
properties. Therefore, we update these functions to accept a property
set as the argument, and pass a collection of transform-like properties
into them.
Note: The updates in ActiveLayerTracker are not related to this bug, but
I think it's better to update all of them together for supporting
compositor animations on individual transforms later.
Assignee | ||
Comment 3•6 years ago
|
||
Depends on D20412
Comment 6•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/4ac79195eb46
https://hg.mozilla.org/mozilla-central/rev/2c10e071b8de
Updated•6 years ago
|
Updated•6 years ago
|
Description
•